Bug 402843. Don't persistently store scroll positions in device pixels, it just gets out of sync and causes bugs during full zoom. r+sr=bzbarsky